12 спринт реализовал часть замечаний